--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <!--Do the exercises here-->
   <h1>Hello</h1>
   <h2>This is my website</h2>
-  <p>Here I write about things that I find interesting</p>
+  <p><strong>Here</strong> I write about things that I find interesting</p>
   <p>Such as learning HTML</p>
-  <em>To be continued...</em>
+  <em><strong>To be continued...</strong> </em>
 </body>
 
 </html>
