--- a/index.html
+++ b/index.html
@@ -11,8 +11,22 @@
   <!--Do the exercises here-->
   <h1>Hello</h1>
   <h2>This is my website</h2>
-  <p><strong>Here</strong> I write about things that I find interesting</p>
-  <p>Such as learning HTML</p>
+  <h3>The learning goals for this course are in essence to</h3>
+  <ul>
+    <li>Learn HTML</li>
+    <ul>
+      <li>Understand what HTML is and what it's used for</li>
+      <li>Know what an HTML element is and what it consists of</li>
+      <li>Know what an HTML document consists of</li>
+    </ul>
+    <li>Learn CSS</li>
+    <ul>
+      <li>Know what CSS is and what it is used for</li>
+      <li>Know how to use the most common features of CSS</li>
+    </ul>  
+  </ul>
+  <p><strong>Here</strong> I write about things that find interesting</p>
+  <p>Such as learning <em>HTML</em></p>
   <em><strong>To be continued...</strong> </em>
 </body>
 
